# auction-sdk-python

./: .env.example  README.md  pyproject.toml
abis/: CrabV2.json
auction_sdk/common/: chains.py  contract.py  definitions.py  erc20.py  meta.py
auction_sdk/crab/: crab_v2.py
auction_sdk/wallet/: wallet.py
crab_v2_sdk_python/: chains.py  contract.py  crab_v2.py  definitions.py  erc20.py  utils.py  wallet.py
scripts/: crab_v2_sdk_script.py
tests/: test_crab_v2_sdk_python.py
